# raxis

./: Cargo.toml  build.rs  ipsum.txt
raxis-core/: Cargo.toml
raxis-core/src/: lib.rs
raxis-proc-macro/: Cargo.toml
raxis-proc-macro/src/: lib.rs
src/: clipboard.rs  dragdrop.rs  focus.rs  lib.rs  main.rs
src/gfx/: circle_arc.rs  color.rs  command_executor.rs  command_recorder.rs  draw_commands.rs  mod.rs
src/gfx/effects/: builtins.rs  instance.rs  mod.rs  registration.rs  traits.rs
src/gfx/effects/shaders/: README.md  box_blur.cso  box_blur.hlsl  liquid_glass.cso  liquid_glass.hlsl
src/layout/: fit_along_axis.rs  float.rs  grow_and_shrink_along_axis.rs  helpers.rs  mod.rs  model.rs  positioning.rs  scroll_manager.rs  smooth_scroll.rs  visitors.rs
src/math/: easing.rs
src/runtime/: app_handle.rs  clipboard.rs  context_menu.rs  device.rs  dragdrop.rs  focus.rs  font_manager.rs  mod.rs  scroll.rs  smooth_scroll.rs  syscommand.rs  task.rs  titlebar_hit_test.rs  tray.rs  util.rs  vkey.rs
src/runtime/input/: middle_mouse.rs  mod.rs  mouse.rs  scrollbar.rs
src/runtime/window/: builder.rs  mod.rs
src/runtime/wndproc/: handlers.rs  ime.rs  keyboard.rs  lifecycle.rs  mod.rs  mouse.rs  nonclient.rs  system.rs
src/util/: mod.rs  str.rs  unique.rs  windows.rs
src/widgets/: button.rs  dragdrop.rs  drop_target.rs  image.rs  integrated_drop_target.rs  mod.rs  mouse_area.rs  renderer.rs  rule.rs  selectable_text.rs  slider.rs  spinner.rs  svg.rs  svg_path.rs  text.rs  text_input.rs  titlebar_controls.rs  toggle.rs
