[workspace]
members = ["raxis-core", "raxis-proc-macro"]

[package]
name = "raxis"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
async-stream = "0.3.6"
const_format = "0.2.34"
dhat = { version = "0.3.3", optional = true }
futures = "0.3.31"
slotmap = "1.0.7"
smol = { version = "2.0.2", optional = true }
smol_str = "0.3.2"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
], optional = true }
string-interner = "0.19.0"
unicode-segmentation = "1.11"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
] }
windows-core = "0.61.2"
windows-numerics = "0.2.0"
raxis-core = { path = "raxis-core" }
raxis-proc-macro = { path = "raxis-proc-macro" }
lazy_static = "1.5.0"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = "fat"
panic = "abort"
# debug = 1

[features]
default = ["smol-runtime"]
dhat-heap = ["dhat"]
smol-runtime = ["smol"]
tokio = ["dep:tokio"]
